--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -6,20 +6,22 @@
 <div class="mb-5">       
   <h1>Все посты пользователя {{ author.get_full_name }} </h1>
   <h3>Всего постов: {{ post_list.count }} </h3>
-  {% if following and user.is_authenticated %}
-  <a
-    class="btn btn-lg btn-light"
-    href="{% url 'posts:profile_unfollow' author.username %}" role="button"
-  >
-    Отписаться
-  </a>
-{% elif user.is_authenticated %}
+  {% if user != author %}
+    {% if following and user.is_authenticated %}
     <a
-      class="btn btn-lg btn-primary"
-      href="{% url 'posts:profile_follow' author.username %}" role="button"
+      class="btn btn-lg btn-light"
+      href="{% url 'posts:profile_unfollow' author.username %}" role="button"
     >
-      Подписаться
+      Отписаться
     </a>
+    {% elif user.is_authenticated %}
+      <a
+        class="btn btn-lg btn-primary"
+        href="{% url 'posts:profile_follow' author.username %}" role="button"
+      >
+        Подписаться
+      </a>
+    {% endif %}
  {% endif %}
 </div>
 {% include 'posts/includes/posts_view.html' %}
