Migrate CBV, update tests, models

--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -28,7 +28,7 @@
             {% endif %}
             <form method="post" enctype="multipart/form-data"
                 action="{% if is_edit %}
-                          {% url 'posts:post_edit'  post_id  %}
+                          {% url 'posts:post_edit' post.pk  %}
                         {% else %}   
                           {% url 'posts:post_create' %}          
                         {% endif %}"
