--- a/yatube/templates/posts/includes/comments_view.html
+++ b/yatube/templates/posts/includes/comments_view.html
@@ -3,13 +3,33 @@
   <div class="card my-4">
     <h5 class="card-header">Добавить комментарий:</h5>
     <div class="card-body">
-      <form method="post" action="{% url 'posts:add_comment' post.id %}">
-        {% csrf_token %}      
-        <div class="form-group mb-2">
-          {{ form.text|addclass:"form-control" }}
-        </div>
-        <button type="submit" class="btn btn-primary">Отправить</button>
-      </form>
+      <form method="post" action="{% url 'posts:add_comment' post.pk %}">       
+        {% csrf_token %}
+        {% for field in form %} 
+          <div class="form-group row my-3 p-3">
+            <label for="{{ field.id_for_label }}">
+              {{ field.label }}
+              {% if field.field.required %}
+                <span class="required text-danger">*</span>
+              {% endif %}
+            </label>
+            {{ field|addclass:'form-control' }} 
+            {% if field.help_text %}
+              <small 
+                id="{{ field.id_for_label }}-help"
+                class="id_group-help" class="form-text text-muted"
+              >
+              {{ field.help_text|safe }}
+              </small>
+            {% endif %}
+          </div>
+        {% endfor %}
+          <div class="d-flex justify-content-end">
+            <button type="submit" class="btn btn-primary">
+                {% if is_edit %} Сохранить {% else %} Добавить {% endif %}   
+            </button>
+          </div>
+      </form> 
     </div>
   </div>
 {% endif %}
