--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="mb-5">       
   <h1>Все посты пользователя {{ author.get_full_name }} </h1>
-  <h3>Всего постов: {{ post_list.count }} </h3>
+  <h3>Всего постов: {{ count }} </h3>
   {% if user != author %}
     {% if following and user.is_authenticated %}
     <a
